--- a/index.html
+++ b/index.html
@@ -1,72 +1,99 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Lucu Buat Kamu 😜</title>
-  <style>
-    body {
-      background-color: #fff4fa;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-    h1 {
-      font-size: 2rem;
-      color: #d63384;
-    }
-    .btn-container {
-      margin-top: 2rem;
-    }
-    button {
-      background-color: #ff69b4;
-      border: none;
-      color: white;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-      margin: 1rem;
-      border-radius: 1rem;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
-    button:hover {
-      transform: scale(1.1);
-    }
-    #result {
-      font-size: 1.5rem;
-      margin-top: 2rem;
-      color: #ff1493;
-    }
-  </style>
-</head>
-<body>
-  <h1>Ada pertanyaan penting buat kamu 😏</h1>
-  <p>Kamu suka kejutan nggak?</p>
+import React, { useState } from "react";
+import { Card, CardContent } from "@/components/ui/card";
+import { Button } from "@/components/ui/button";
+import { Input } from "@/components/ui/input";
+import { motion } from "framer-motion";
 
-  <div class="btn-container">
-    <button onclick="showJoke()">Iya</button>
-    <button onclick="showJoke()">Banget!</button>
-  </div>
+const cards = [
+  { id: 1, title: "Hunter Profesional", desc: "Lisensi standar untuk para hunter yang telah lulus ujian." },
+  { id: 2, title: "Hunter Gourmet", desc: "Hunter yang ahli dalam menemukan makanan langka." },
+  { id: 3, title: "Hunter Beast", desc: "Hunter yang menangani binatang buas dan makhluk langka." },
+  { id: 4, title: "Hunter Nen", desc: "Hunter yang menguasai teknik Nen tingkat tinggi." },
+];
 
-  <div id="result"></div>
+export default function HunterLicenseApp() {
+  const [step, setStep] = useState(1);
+  const [name, setName] = useState("");
+  const [selectedCard, setSelectedCard] = useState(null);
 
-  <script>
-    function showJoke() {
-      const punchlines = [
-        "Langit emang indah, tapi kamu lebih 😎",
-        "Kucing aja ngeong, masa kamu nggak sayang~ 😽",
-        "Aku udah vaksin, tapi masih nggak kebal dari kamu 😳",
-        "Kopi aja bisa bikin melek, kamu bikin deg-degan 😭❤️"
-      ];
-      const result = document.getElementById('result');
-      const random = Math.floor(Math.random() * punchlines.length);
-      result.textContent = punchlines[random];
-    }
-  </script>
-</body>
-</html>
+  return (
+    <div className="min-h-screen bg-gradient-to-br from-zinc-900 to-black text-white flex flex-col items-center justify-center p-4">
+      <motion.h1
+        initial={{ opacity: 0, y: -20 }}
+        animate={{ opacity: 1, y: 0 }}
+        className="text-3xl md:text-5xl font-bold mb-6 text-amber-400"
+      >
+        Daftar Lisensi Hunter x Hunter
+      </motion.h1>
 
+      {step === 1 && (
+        <motion.div
+          initial={{ opacity: 0 }}
+          animate={{ opacity: 1 }}
+          className="space-y-4"
+        >
+          <p className="text-lg">Masukkan nama kamu untuk memulai ujian Hunter!</p>
+          <Input
+            placeholder="Nama Hunter"
+            value={name}
+            onChange={(e) => setName(e.target.value)}
+            className="text-black"
+          />
+          <Button
+            onClick={() => name && setStep(2)}
+            className="bg-amber-500 hover:bg-amber-600"
+          >
+            Mulai Ujian!
+          </Button>
+        </motion.div>
+      )}
+
+      {step === 2 && (
+        <motion.div
+          initial={{ opacity: 0 }}
+          animate={{ opacity: 1 }}
+          className="grid grid-cols-1 md:grid-cols-2 gap-6"
+        >
+          {cards.map((card) => (
+            <Card
+              key={card.id}
+              onClick={() => {
+                setSelectedCard(card);
+                setStep(3);
+              }}
+              className="cursor-pointer hover:scale-105 transition-transform bg-zinc-800 border-amber-400 border"
+            >
+              <CardContent className="p-6">
+                <h2 className="text-xl font-semibold text-amber-300">{card.title}</h2>
+                <p className="mt-2 text-sm text-gray-300">{card.desc}</p>
+              </CardContent>
+            </Card>
+          ))}
+        </motion.div>
+      )}
+
+      {step === 3 && selectedCard && (
+        <motion.div
+          initial={{ opacity: 0 }}
+          animate={{ opacity: 1 }}
+          className="text-center"
+        >
+          <h2 className="text-2xl font-bold text-emerald-400 mb-4">Selamat, Hunter {name}!</h2>
+          <p className="text-lg mb-2">
+            Kamu telah mendapatkan lisensi: <span className="font-semibold text-amber-300">{selectedCard.title}</span>
+          </p>
+          <p className="text-sm text-gray-300">{selectedCard.desc}</p>
+          <div className="mt-6">
+            <Button onClick={() => {
+              setStep(1);
+              setName("");
+              setSelectedCard(null);
+            }} className="bg-amber-600 hover:bg-amber-700">
+              Daftar Ulang
+            </Button>
+          </div>
+        </motion.div>
+      )}
+    </div>
+  );
+}
